<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blackfrogweb.popularmovies.DetailActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/movieInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/title_text_size"
                        tools:text="@string/movie_title" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@color/secondaryText"
                        tools:text="@string/movie_date_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/score_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/tendp_padding"
                            android:text="@string/movie_score_text"
                            android:textAlignment="center"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            android:textColor="@color/secondaryText" />

                        <TextView
                            android:id="@+id/score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/tendp_padding"
                            android:paddingTop="@dimen/tendp_padding"
                            android:textAlignment="center"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            android:textColor="@color/secondaryText"
                            tools:text="@string/movie_score_number" />

                        <ImageView
                            android:layout_width="@dimen/poster_width"
                            android:layout_height="@dimen/poster_height"
                            android:baselineAlignBottom="false"
                            android:contentDescription="@string/image_poster"
                            android:cropToPadding="false"
                            android:duplicateParentState="false"
                            android:paddingBottom="@dimen/star_padding"
                            android:paddingEnd="@dimen/star_padding"
                            android:paddingStart="@dimen/star_padding"
                            android:paddingTop="@dimen/star_top_padding"
                            android:scaleType="fitStart"
                            android:src="@drawable/star" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/buttonLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:padding="@dimen/relative_layout_padding">

                        <Button
                            android:id="@+id/bttnSaveFavorite"
                            style="@style/Widget.AppCompat.Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/green_button"
                            android:text="@string/add_to_favorites"
                            android:textAppearance="@style/ButtonText"
                            android:textSize="@dimen/title_text_size" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/plot_padding"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/trailers_title"
                android:layout_width="match_parent"             android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trailers_title_padding"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/trailers_titles"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/fivedp_padding"
                android:background="@color/separator" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/trailerListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/trailer_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_no_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/no_trailer_message_topMargin"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_trailers"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_no_internet_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/no_internet_message_topMargin"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_internet_connection"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reviews_title_padding"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/reviews_titles"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />

            <ProgressBar
                android:id="@+id/review_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reviews_container_height"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_no_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/no_review_message_topMargin"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_reviews"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_no_internet_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/no_internet_message_topMargin"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_internet_connection"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>